<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="info.androidhive.slidingmenu.preference_acti">

    <TableRow>

        <TextView
            android:paddingRight="5dp"
            android:text="@string/checkbox" />

        <TextView android:id="@+id/chkbox" />
    </TableRow>

    <TableRow>

        <TextView
            android:paddingRight="5dp"
            android:text="@string/ringtone" />

        <TextView android:id="@+id/ringtone" />
    </TableRow>

    <TableRow>

        <TextView
            android:paddingRight="5dp"
            android:text="@string/checkbox2" />

        <TextView android:id="@+id/chkbox2" />
    </TableRow>


    <TableRow>

        <TextView
            android:paddingRight="5dp"
            android:text="@string/text" />

        <TextView android:id="@+id/txt" />
    </TableRow>

    <TableRow>

        <TextView
            android:paddingRight="5dp"
            android:text="@string/list" />

        <TextView android:id="@+id/list" />
    </TableRow>

</TableLayout>
